alignments fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1210,7 +1210,7 @@ a:hover {
 
 .custom-blogs-heading {
     margin-top: 30px;
-    margin-left: 60px;
+    /*margin-left: 60px;*/
     font-size: 30px;
     font-weight: bold;
     color: #ffffff;
